@@ -1,23 +1,23 @@
 // Copyright 2002-2013, University of Colorado Boulder
 
 /**
- * Main entry point for the "Molarity" sim.
+ * Main entry point for the 'Molarity' sim.
  *
  * @author Chris Malley (PixelZoom, Inc.)
  */
-require( [ "JOIST/SimLauncher", "JOIST/Sim", "molarity/MolarityTab", "molarity/MStrings", "molarity/MImages" ],
+require( [ 'JOIST/SimLauncher', 'JOIST/Sim', 'molarity/MolarityTab', 'molarity/MStrings', 'molarity/MImages' ],
   function( SimLauncher, Sim, MolarityTab, MStrings, MImages ) {
-    "use strict";
+    'use strict';
 
     //TODO i18n?
     var simOptions = {
-      credits: "PhET Development Team -\n" +
-               "Lead Design: Julia Chamberlain\n" +
-               "Software Development: Chris Malley\n" +
-               "Design Team: Kelly Lancaster, Robert Parson, Kathy Perkins"
+      credits: 'PhET Development Team -\n' +
+               'Lead Design: Julia Chamberlain\n' +
+               'Software Development: Chris Malley\n' +
+               'Design Team: Kelly Lancaster, Robert Parson, Kathy Perkins'
     };
 
-    if ( window.phetcommon.getQueryParameter( "dev" ) ) {
+    if ( window.phetcommon.getQueryParameter( 'dev' ) ) {
       simOptions = _.extend( { showHomeScreen: false, tabIndex: 1 }, simOptions );
     }
 
