@@ -7,11 +7,11 @@
  * @author Chris Malley (PixelZoom, Inc.)
  */
 define( function( require ) {
-  "use strict";
+  'use strict';
 
   // imports
-  var Font = require( "SCENERY/util/Font" );
-  var inherit = require( "PHET_CORE/inherit" );
+  var Font = require( 'SCENERY/util/Font' );
+  var inherit = require( 'PHET_CORE/inherit' );
 
   /**
    * @param {Number} size in pixels
@@ -21,8 +21,8 @@ define( function( require ) {
   function MFont( size, weight ) {
     Font.call( this, {
       family: '"Arial", sans-serif',
-      size: ( size + "px" ),
-      weight: weight || "normal"
+      size: ( size + 'px' ),
+      weight: weight || 'normal'
     } );
   }
 
