@@ -1,7 +1,7 @@
 // Copyright 2002-2013, University of Colorado Boulder
 
 // Returns version identifier for the simulation.
-define( function( require ) {
-  "use strict";
-  return function() { return "0.0.0-6"; };
+define( function() {
+  'use strict';
+  return function() { return '0.0.0-6'; };
 } );
