@@ -1,3 +1,4 @@
+7/11/13 change double quotes (") to single quotes (') throughout
 6/27/13 update copyright
 6/24/13 add credits
 6/21/13 center Reset All button under concentration display, account for i18n of combo box
